# flux2.c

./: .gitignore  AGENT.md  Makefile  README.md  SPEED.md  download_model.py  download_model.sh  flux.c  flux.h  flux_cli.c  flux_kernels.c  flux_metal.h  flux_metal.m  flux_qwen3.c  flux_qwen3.h  flux_qwen3_tokenizer.c  flux_safetensors.c  flux_sample.c  flux_shaders.metal  flux_transformer.c  flux_vae.c  flux_zimage_transformer.c  iris.c  iris.h  iris_qwen3.c  iris_qwen3.h  iris_qwen3_tokenizer.c  iris_sample.c  iris_transformer_zimage.c  iris_vae.c  main.c  run_test.py
conversion/: README.md  check_flux2c_keys.py  convert_flux2_transformer.py  merge_flux2_lora.py  pyproject.toml
lora/: run_local_flux2_lora.py
