[project]
name = "flux2-conversion"
version = "0.1.0"
description = "Utilities to convert FLUX.2-klein single-file checkpoints for flux2.c"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers",
    "huggingface-hub>=1.4.1",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
